Função de resetar o Jogo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="controls col">
                     <a href="#" class="btn btn-success" @click.prevent="changePlayer">Pular</a>
                     <a href="#" class="btn btn-primary" @click.prevent="finishGame">Finalizar Jogo</a>
-                    <a href="" class="btn btn-danger">Resetar</a>
+                    <a href="#" class="btn btn-danger" @click.prevent="resetGame">Resetar</a>
                 </div>
             </div>
 
@@ -93,6 +93,18 @@
                             alert('O Player 1 foi o campeão');
                         else
                             alert('O Jogo empatou')
+
+                        let vm = this;
+
+                        setTimeout(function(){
+                            vm.resetGame();
+                        }, 3000)
+                    },
+                    resetGame: function(){
+                        this.playerOne.points = 0;
+                        this.playerTwo.points = 0;
+                        this.cartSelected = '';
+                        this.playerActived = 1;
                     }
                 }
             })
